# Study

./: .gitattributes  .gitignore  README.md
Blender/キーマップ/Unity風視点操作キーマップ/: 説明書.txt
BookMemo/2018/: リーダブルコード抜粋.md
BookReview/2018/: リーダブルコード抜粋.md
Research/VisualStudioCodeのライセンス/: VisualStudioCodeのライセンス.md
Research/アトラス_メタファーのライセンス/: アトラス_メタファー_Licenses.md
Research_licenses/: アトラス_メタファー_Licenses.md
Research_licenses/VisualStudioCodeのライセンス/: VisualStudioCodeのライセンス.md
Study/AI/: 01_学習と推論.md
Study/AI/メモ/: メモ.md  メモ_MCP.md  (+3 more)
Study/SOLID原則/: 01_SOLID原則.md  02_S_単一責務の原則.md  03_O_オープン・クローズドの原則.md  04_L_リスコフの置換原則.md  05_I_インターフェース分離の原則.md  06_D_依存関係逆転の原則.md
Study/その他/: AI駆動開発ConferenceSpring2025_20250507.md
Study/デザインパターン/: 01_デザインパターン.md  02_Singletonパターン.md  03_FactoryMethodパターン.md  05_Adapterパターン.md  06_Observerパターン.md  07_Stateパターン.md  08_Strategyパターン.md  09_AbstractFactoryパターン.md  10_TemplateMethodパターン.md  11_Compositeパターン.md  12_Facadeパターン.md  31_NullObjectパターン.md  32_DependencyInjectionパターン.md
Study/乱数/: 乱数.md
StudyMemo/CMake/: CMakeCommandManual_v3.22.md
StudyMemo/乱数/: 乱数.md
StudyMemo/展示会_勉強会/: 20250606_CursorMeetupTokyo.md
Try/CMake/Sample2/calculation/: CMakeLists.txt
Try/CMake/Sample2/calculation/include/: Calculate1.hpp
Try/CMake/Sample2_VSCode/: CMakeLists.txt  README.md
Try/Python/: Pythonのユニットテストやってみる.md
Try/Rust/: Rust_1_はじめてみる.md
WSL2/01_Install/: WSL2Install.md  WSL2_Install.md
WSL2/02_XServer/: XServerSetup.md
WSL2/03_WSL_Win_Access/: WSL2WinAccess.md
old/: README.md
old/Zoom会議をリアルタイム翻訳/: Zoom会議でリアルタイム翻訳してみた.md
(+94 files in other folders)
